# IRBITSKIY_1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
LAB_1/: .gitignore  CMakeLists.txt
LAB_1/task_1/: CMakeLists.txt  flags_1.c  flags_1.h  functions_1.c  functions_1.h  math_functions.c  math_functions.h  task_1.c
LAB_1/task_10/: CMakeLists.txt  functions_10.c  functions_10.h  task_10.c
LAB_1/task_2/: CMakeLists.txt  equations.c  functions_2.h  lims.c  rows.c  task_2.c
LAB_1/task_3/: CMakeLists.txt  flags_3.c  flags_3.h  functions_3.c  functions_3.h  task_3.c
LAB_1/task_4/: CMakeLists.txt  flags_4.c  flags_4.h  functions_4.c  functions_4.h  task_4.c
LAB_1/task_5/: CMakeLists.txt  functions_5.c  functions_5.h  task_5.c
LAB_1/task_6/: CMakeLists.txt  functions_6.c  functions_6.h  task_6.c
LAB_1/task_7/: CMakeLists.txt  flags_7.c  flags_7.h  functions_7.c  functions_7.h  task_7.c
LAB_1/task_8/: CMakeLists.txt  functions_8.c  functions_8.h  task_8.c
LAB_1/task_9/: CMakeLists.txt  functions_9.c  functions_9.h  task_9.c
LAB_2/: .gitignore  CMakeLists.txt
LAB_2/task_1/: CMakeLists.txt  flags_1.c  flags_1.h  functions_1.c  functions_1.h  task_1.c
LAB_2/task_10/: CMakeLists.txt
LAB_2/task_2/: CMakeLists.txt  functions_2.c  functions_2.h  helping_functions.c  task_2.c
LAB_2/task_3/: CMakeLists.txt
LAB_2/task_4/: CMakeLists.txt
LAB_2/task_7/: CMakeLists.txt
LAB_2/task_8/: CMakeLists.txt
LAB_2/task_9/: CMakeLists.txt
LAB_3/: CMakeLists.txt
LAB_3/task_1/: CMakeLists.txt
LAB_3/task_10/: CMakeLists.txt
LAB_5/: CMakeLists.txt
(+104 files in other folders)
