cmake_minimum_required(VERSION 3.10)

project(LAB_1 C)

set(CMAKE_C_STANDARD 99)

add_subdirectory(TASK_1)
add_subdirectory(TASK_2)
add_subdirectory(TASK_3)
add_subdirectory(TASK_4)
add_subdirectory(TASK_5)
add_subdirectory(TASK_6)
add_subdirectory(TASK_7)
add_subdirectory(TASK_8)
add_subdirectory(TASK_9)
add_subdirectory(TASK_10)