cmake_minimum_required(VERSION 3.10)

project(LAB_1 C)

set(CMAKE_C_STANDARD 99)

add_subdirectory(task_1)
add_subdirectory(task_2)
add_subdirectory(task_3)
add_subdirectory(task_4)
add_subdirectory(task_5)
add_subdirectory(task_6)
add_subdirectory(task_7)
add_subdirectory(task_8)
add_subdirectory(task_9)
add_subdirectory(task_10)